Fix arrows orientation on mobile

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -2362,11 +2362,10 @@ footer {
     .axis-swap-btn svg {
         width: 16px;
         height: 16px;
-        transform: rotate(90deg);
     }
 
     .axis-swap-btn:hover svg {
-        transform: rotate(270deg);
+        transform: rotate(180deg);
     }
 
     .slider-row {
